@@ -5,16 +5,24 @@
 .visible { visibility: visible; }
 .hidden { visibility: hidden; }
 
-.o100 { opacity: 1.00; }
+.o100 { opacity: 1;    }
 .o95  { opacity: 0.95; }
-.o90  { opacity: 0.9;  }
-.o80  { opacity: 0.8;  }
-.o70  { opacity: 0.7;  }
-.o60  { opacity: 0.6;  }
-.o50  { opacity: 0.5;  }
-.o40  { opacity: 0.4;  }
-.o30  { opacity: 0.3;  }
-.o20  { opacity: 0.2;  }
-.o10  { opacity: 0.1;  }
+.o90  { opacity: 0.90; }
+.o85  { opacity: 0.85; }
+.o80  { opacity: 0.80; }
+.o75  { opacity: 0.75; }
+.o70  { opacity: 0.70; }
+.o65  { opacity: 0.65; }
+.o60  { opacity: 0.60; }
+.o55  { opacity: 0.55; }
+.o50  { opacity: 0.50; }
+.o45  { opacity: 0.45; }
+.o40  { opacity: 0.40; }
+.o35  { opacity: 0.35; }
+.o30  { opacity: 0.30; }
+.o25  { opacity: 0.25; }
+.o20  { opacity: 0.20; }
+.o15  { opacity: 0.15; }
+.o10  { opacity: 0.10; }
 .o5   { opacity: 0.05; }
 .o0   { opacity: 0;    }
